fix modals on dark mode

--- a/public/scss/app-dark.scss
+++ b/public/scss/app-dark.scss
@@ -13,7 +13,7 @@ body {
 }
 
 .card {
-  background-color: $black-light;
+  background-color: $black-lighter;
   color: $grey-lightest;
 }
 
